--- a/playbook.yml
+++ b/playbook.yml
@@ -112,6 +112,7 @@
   become_method: sudo
   tasks:
     - name: install bind
+      become: yes
       apt:
         name: bind9
     - name: add local forwarders
